@@ -1,3 +1,4 @@
+7/2/14 #62 relocate 'move' icon to upper-left of game dialog
 6/25/14 #29 game dialogs: reduce font size, reduce vertical spacing, reduce size of X and check mark
 # 1.0.0-dev.3 6/23/14
 6/23/14 #27 uniformly reduce size of terms and arrow in equations
